--- a/index.html
+++ b/index.html
@@ -8,6 +8,9 @@
         <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.11.2/css/all.css">
     </head>
     <body>
+        <!--
+            Resolvendo o alinhamento do h1 dentro text-align
+        -->
         <p id="texto1">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Quisque ligula felis, luctus a fermentum ac, vestibulum vel nibh. Ut condimentum nisi nec luctus efficitur. Proin euismod metus eget magna tincidunt vehicula non vitae orci. Ut vitae commodo magna. Aenean bibendum risus non nunc viverra laoreet. Class aptent taciti sociosqu ad litora torquent per conubia nostra, per inceptos himenaeos. Cras lobortis suscipit elit at commodo.</p>
         <main>
             <h1>texto1</h1>
@@ -20,6 +23,12 @@
                         <i class="fas fa-align-left fa-3x"></i>
                         <i class="fas fa-align-right fa-3x"></i>
                         <p class="set-initial">X</p>
+                    </div>
+                </div>
+                <div class="text-color">
+                    <h1>text-color</h1>
+                    <div class="buttons">
+
                     </div>
                 </div>
             </div>
