Adicionando botões do text-color

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
         <main>
             <h1>texto1</h1>
             <div class="interface">
-                <div class="text-align">
+                <div class="text-align option-interface">
                     <h1>text-align</h1>
                     <div class="buttons">
                         <i class="fas fa-align-center fa-3x"></i>
@@ -25,9 +25,17 @@
                         <p class="set-initial">X</p>
                     </div>
                 </div>
-                <div class="text-color">
+                <div class="text-color option-interface">
                     <h1>text-color</h1>
                     <div class="buttons">
+                        <div class="color blue">
+                        </div>
+                        <div class="color red">
+                        </div>
+                        <div class="color yellow">
+                        </div>
+                        <div class="color green">
+                        </div>
 
                     </div>
                 </div>
