--- a/index.html
+++ b/index.html
@@ -36,7 +36,23 @@
                         </div>
                         <div class="color green">
                         </div>
-
+                        <div class="color black">
+                        </div>
+                    </div>
+                </div>
+                <div class="background-color option-interface">
+                    <h1>background-color</h1>
+                    <div class="buttons">
+                        <div class="color blue background-color-blue">
+                        </div>
+                        <div class="color red background-color-red">
+                        </div>
+                        <div class="color yellow background-color-yellow">
+                        </div>
+                        <div class="color green background-color-green">
+                        </div>
+                        <div class="color black background-color-black">
+                        </div>
                     </div>
                 </div>
             </div>
