--- a/index.html
+++ b/index.html
@@ -8,9 +8,6 @@
         <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.11.2/css/all.css">
     </head>
     <body>
-        <!--
-            Resolvendo o alinhamento do h1 dentro text-align
-        -->
         <p id="texto1">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Quisque ligula felis, luctus a fermentum ac, vestibulum vel nibh. Ut condimentum nisi nec luctus efficitur. Proin euismod metus eget magna tincidunt vehicula non vitae orci. Ut vitae commodo magna. Aenean bibendum risus non nunc viverra laoreet. Class aptent taciti sociosqu ad litora torquent per conubia nostra, per inceptos himenaeos. Cras lobortis suscipit elit at commodo.</p>
         <main>
             <h1>texto1</h1>
@@ -43,15 +40,15 @@
                 <div class="background-color option-interface">
                     <h1>background-color</h1>
                     <div class="buttons">
-                        <div class="color blue background-color-blue">
+                        <div class="color blue">
                         </div>
-                        <div class="color red background-color-red">
+                        <div class="color red">
                         </div>
-                        <div class="color yellow background-color-yellow">
+                        <div class="color yellow">
                         </div>
-                        <div class="color green background-color-green">
+                        <div class="color green">
                         </div>
-                        <div class="color black background-color-black">
+                        <div class="color white">
                         </div>
                     </div>
                 </div>
